--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,36 @@
-* {
+/* * {
     background-color: aquamarine;
+} */
+body {
+    box-sizing: border-box;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+}
+
+.box {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    padding: 10px;
+    justify-content: space-between;
+}
+
+.image {
+    margin: 20px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 1%;
+}
+
+.image,
+img {
+    width: 350px;
+    /* min-width: 300px; */
+    height: 250px;
+    /* min-height: 200px; */
+}
+
+img {
+    object-fit: cover;
+    overflow: hidden;
 }
