--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,6 @@ body {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
 }
-
 .box {
     display: flex;
     flex-direction: row;
@@ -15,7 +14,20 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
+.component {
+    border: indianred;
+    padding: 50px;
+    background-color: white;
+    opacity: 80%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+body {
+    background-color: lightblue;
+}
 .image {
     margin: 20px;
     padding: 5px;
@@ -35,15 +47,11 @@ img {
     object-fit: cover;
     overflow: hidden;
 }
-.fruit {
-    background-color: khaki;
+#main {
+    background-color: ivory;
 }
-.component {
-    background-color: hotpink;
-    opacity: 80%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+#main,
+form {
+    padding: 10px;
+    margin: 10px;
 }
