--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 /* * {
     background-color: aquamarine;
 } */
+a {
+    cursor: pointer;
+}
 body {
     box-sizing: border-box;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
@@ -8,25 +11,47 @@ body {
 }
 .box {
     display: flex;
-    flex-direction: row;
-    margin: 20px;
-    padding: 10px;
+    /* flex-direction: row;
+    margin: 20px;*/
+    /* padding: 10px; */
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.component {
-    border: indianred;
-    padding: 50px;
-    background-color: white;
-    opacity: 80%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
 body {
-    background-color: lightblue;
+    background-color: rgb(248, 229, 231);
+}
+button {
+    cursor: pointer;
+}
+#close {
+    cursor: pointer;
+}
+.component {
+    padding: 50px;
+    background-color: rgb(205, 230, 228);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-height: 700px;
+
+    min-width: 500px;
+
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    overflow-y: auto;
+}
+.component,
+button {
+    width: 100px;
+}
+.component,
+input {
+    max-width: 200px;
+}
+.comments {
+    /* border: 3px red; */
 }
 .image {
     margin: 20px;
@@ -41,6 +66,7 @@ img {
     /* min-width: 300px; */
     height: 250px;
     /* min-height: 200px; */
+    align-self: center;
 }
 
 img {
@@ -48,7 +74,7 @@ img {
     overflow: hidden;
 }
 #main {
-    background-color: ivory;
+    background-color: rgb(252, 252, 243);
 }
 #main,
 form {
